re PR c++/66336 ([C++14][Variable templates] Spurious "error: expansion pattern contains no argument packs")

PR c++/66336
	* pt.c (find_parameter_packs_r): Handle variable templates.
	(variable_template_specialization_p): New.
	* cp-tree.h: Declare it.

From-SVN: r226655